# azure_devops_api

./: Cargo.toml  LICENSE  README.md
src/: azure_devops_client.rs  errors.rs  lib.rs  request.rs  request_trait.rs
src/_async/: azure_devops_client.rs  request.rs
src/blocking/: azure_devops_client.rs  mod.rs  request.rs
src/work/: iterations.rs  mod.rs
src/work_item_tracking/: classification_nodes.rs  mod.rs  wiql.rs  work_items.rs
tests/: iterations_request_tests.rs
