[package]
name = "azure_devops_api"
version = "0.1.0"
authors = ["Adam Smith <adamsmith2708@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.11.0"
url = "2.1.1"